src/tests/functionality/assignment_5_functions_headers/valid/10_mandatory_define_type_alias_replacement.c
#define BOOL int
#define TRUE 1
#define FALSE 0

int main() {
    BOOL ok = TRUE;
    BOOL no = FALSE;
    return ok + no;
}
