src/tests/functionality/assignment_5_functions_headers/invalid_semantic/17_mandatory_const_pointer_parameter_cannot_write_pointee.c
void write_const(const int *p) {
    *p = 4;
    return;
}

int main() {
    int x = 0;
    write_const(&x);
    return x;
}
